--- a/app/views/students/create.html.erb
+++ b/app/views/students/create.html.erb
@@ -1,3 +1,13 @@
-Name: <%= @name%><br />
-Age: <%= @age %><br />
-Address: <%= @address %><br />
+<%= form_tag do %>
+	Enter Name:<%= text_field_tag 'name'%><br />
+	Enter Age: <%= text_field_tag 'age' %><br />
+	Enter Address: <%= text_area_tag 'address'%><br />
+	Male:<%= radio_button_tag 'gender', 'male' %>
+	Female: <%= radio_button_tag 'gender', 'female' %><br />
+	<%= submit_tag %>
+<% end %>
+
+<%= @name %><br />
+<%= @age %><br />
+<%= @address %><br />
+<%= @gender %><br />
