--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,2 +1,9 @@
-<h1>Students#show</h1>
-<p>Find me in app/views/students/show.html.erb</p>
+<h1>Student Information</h1>
+<p><%= @name %></p>
+<p><%= @age %></p>
+<p><%= @address %></p>
+<p><%= @gender %></p>
+<p><%= @dob %></p>
+<p><%= @habits %></p>
+<p><%= @email %></p>
+<p><%= @file %></p>
