--- a/app/views/students/create.html.erb
+++ b/app/views/students/create.html.erb
@@ -1,3 +1,6 @@
 Name: <%= @name%><br />
 Age: <%= @age %><br />
 Address: <%= @address %><br />
+Gender:<%= @gender %><br/>
+Email:<%=@email %><br/>
+
