--- a/app/views/calculator/multiplication.html.erb
+++ b/app/views/calculator/multiplication.html.erb
@@ -1,9 +1,3 @@
-<%= text_field_tag 'txtres', @var3, placeholder: 'Result', size: 8 %><br/><br/>
-
-<%= form_tag do %>
-	<%= text_field_tag 'txtbox1', '', placeholder: 'First Variable', size: 8 %><br/><br/>
-	<%= text_field_tag 'txtbox2', '', placeholder: 'Second Variable', size: 8 %><br/><br/>
-	<%= submit_tag "Multiplication" %><br/><br/>
-<% end %>
+<%= render "form" %>
 
 &nbsp;<font size="-1"><a href="/calculator/addition">Addition</a> | <a href="/calculator/subtraction">Subtraction</a> | <a href="/calculator/division">Division</a></font>
