--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,23 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<table border="1" cellpadding="5" cellspacing="5" width="100%">
+	<tr>
+		<td colspan="2" align="center" height="150"><strong>This is header part...</strong></td>
+	</tr>
+	<tr>
+		<td width="20%"><strong>This is left navigation part...</strong></td>
+		<td>
+			<!-- Body area starts here -->		
 
-<%= yield %>
+			<%= yield %>
 
+			<!-- Body area ends here.... -->
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2" align="center" height="75"><strong>This is footer area.....</strong></td>
+	</tr>
+</table>		
 </body>
 </html>
