--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
 <%= link_to 'Prime', mathematics_prime_path %>
 <%= link_to 'Palindrome', mathematics_palindrome_path %>
 <%= link_to 'CreateSudent', students_create_path %>
+<%= link_to 'Products', products_path %>
+<%= link_to 'Categories', categories_path %>
 
 <%= yield %>
 
