--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -5,5 +5,29 @@
   <%= @category.name %>
 </p>
 
+<table>
+  <thead>
+    <tr>
+      <th>Number</th>
+      <th>Name</th>
+      <th>Price</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+  	<% i  = 1 %>
+    <% @category.products.each do |category| %>
+      <tr>
+      	<td><%= i%></td>
+      	<% i += 1 %>
+        <td><%= category.name %></td>
+        <td><%= category.price %></td>
+
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
 <%= link_to 'Edit', edit_category_path(@category) %> |
 <%= link_to 'Back', categories_path %>
